# Devolver

./: .gitignore  CONTENTS.md  Cargo.toml  HOOKS.md  JSONL_FORMAT.md  Makefile  PUSH_SETUP.md  README.md  SCHEMA.md  SPEC.md  test-session.jsonl
devlog-receiver/: Cargo.toml
devlog-receiver/src/: db.rs  main.rs  models.rs
src/: config.rs  git.rs  main.rs  output.rs  parser.rs  push.rs  search.rs  server.rs  stats.rs
