[package]
name = "devlog"
version = "0.1.0"
edition = "2021"
description = "Claude Code session ingester - captures conversations for later reference"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
atty = "0.2"
hostname = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
toml = "0.8"
serde_derive = "1.0"
