[package]
name = "devlog-receiver"
version = "0.1.0"
edition = "2021"
description = "Central HTTP receiver for devlog sessions with DuckDB storage"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duckdb = { version = "1.1", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
